added instruction section

--- a/descan.html
+++ b/descan.html
@@ -20,8 +20,6 @@
     <link rel="stylesheet" href="css/navigation-style.css">
     <link rel="stylesheet" href="css/joinus.css">
     <link rel="stylesheet" href="css/descan.css">
-    <script src="css/navbar.js"></script>
-    <script src="css/countdown.js"></script>
 </head>
 
 <body>
@@ -76,7 +74,32 @@
                 <li>Platform: Zoom</li>
                 <li>Audience: Incoming students and parents/guardians</li>
             </ul>
-            Of course, we are also open to answer your questions and worries!
+            <b><u>Instructions</u></b>: <br>
+            <button type="button" class="collapsible">
+                Ensure your Zoom display name includes your name and faculty.
+            </button>
+            <div class="content">
+                Students going to the Vancouver campus, please enter your name as "<span class="time">Name - Faculty</span>"<br>
+                Students going to the Okanagan campus, please enter your name as "<span class="time">Name - Okanagan</span>"<br>
+                Parents please enter your name as "<span class="time">Name - Parent</span>"<br>
+                If you need help to change your name, please consult to
+                <a href="https://teaching.nmc.edu/knowledgebase/changing-your-name-in-a-zoom-meeting/" target="_blank"
+                style="color:darkred">this article</a>
+            </div>
+            <button type="button" class="collapsible">
+                Please mute your microphone during the presentation.
+            </button>
+            <div class="content">
+                If you have any questions, please save it until our <span class="time">Q&A session</span>, where you can ask them directly or through chat.
+            </div>
+            <button type="button" class="collapsible">
+                Use the Raise Hands function to ask question during the Q&A session
+            </button>
+            <div class="content">
+                To do this, click on the participants button <img src="media/participants.png" alt="participant-button"> on the bottom of the screen to open up the column on the right.
+                <br>You should be able to find the button <img src="media/raise-hands.png" alt="raise-hands"> in the column, please press the button again <img src="media/raise-hands.png" alt="raise-hands"> to lower your hand after you've been answered.
+            </div>
+            <br>Of course, we are also open to answer your questions and worries!
 
             Still not enough to convince you? We will let you in on a secret:
             <b>You'll get discount codes and promos from our sponsors, too!</b>
@@ -101,6 +124,11 @@
             <img class="sponsor_img" src="media/shopee.png">
         </div>
     </div>
+
+<!-- JS -->
+<script src="css/navbar.js"></script>
+<script src="css/countdown.js"></script>
+<script src="css/covidfaq.js"></script>
 
 </body>
 <footer id="footer"></footer>
