--- a/navbar.html
+++ b/navbar.html
@@ -12,7 +12,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" id="gisauBrand" href="#">GISAU</a>
+        <a class="navbar-brand" id="gisauBrand" href="index.html">GISAU</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav" id="gisauTabs">
