added sponsor into index.html carousel

--- a/index.html
+++ b/index.html
@@ -74,9 +74,16 @@
                     <div class="centerText">
                         <p> 
                             <span class="exploreHeading">EXPLORE INDONESIA</span><br><br>
-                            <a href="community.html" class="explorelink">Check out Indonesian Community and Sponsors!</a><br><br>
+                            <a href="community.html" class="explorelink">Check out Indonesian Community and Sponsors!</a>
                         </p>
                     </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="temp2 explore">
+                    <div class="exploreHeading">Interested in sponsoring us?</div>
+                    <div style="font-size: 20px">Join our other <a style="color: #333333; text-decoration: underline" href="community.html">sponsors</a>!!!</div>
+                    <div class="explorelink" style="font-size: 20px">Contact us at <a href="mailto:sponsorship.gisau@gmail.com">sponsorship.gisau@gmail.com</a></div>
                 </div>
             </div>
         </div>
