added call to sponsor in community.html

--- a/community.html
+++ b/community.html
@@ -102,11 +102,15 @@
             </div>
         </div>
 
-        <h1 class="sponsorTitle">
+        <h1 class="sponsorTitle" id="sponsors">
             SPONSORS
         </h1>
 
         <div class="sponsorContainer">
+            <div class="call-sponsors">
+                <div class="communityTitle" style="font-size: 38px">Interested in sponsoring us?</div>
+                <p style="font-size: 22px">Contact us at <a href="mailto:sponsorship.gisau@gmail.com">sponsorship.gisau@gmail.com</a></p>
+            </div>
             <div class="sponsorBox">
                 <div class="communityTitle">NUSA COFFEE</div>
                 <div class="communityPic">
