--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="carousel-cell">
                 <div class="temp2 explore">
                     <div class="exploreHeading">Interested in sponsoring us?</div>
-                    <div style="font-size: 20px">Join our other <a style="color: #333333; text-decoration: underline" href="community.html">sponsors</a>!!!</div>
+                    <div style="font-size: 20px">Join our other <a style="color: #333333; text-decoration: underline" href="community.html#sponsors">sponsors</a>!!!</div>
                     <div class="explorelink" style="font-size: 20px">Contact us at <a href="mailto:sponsorship.gisau@gmail.com">sponsorship.gisau@gmail.com</a></div>
                 </div>
             </div>
