--- a/guepage.html
+++ b/guepage.html
@@ -15,7 +15,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="css/googleanalytics.js"></script>
   <!-- CSS -->
   <link rel="stylesheet" href="css/navigation-style.css">
   <link rel="stylesheet" href="css/gue.css">
@@ -26,14 +25,69 @@
     <img class="banner-img" src="media/gue%20copy.jpg" alt="banner">
   </div>
   <div class="desc-box">
-    <div class="description">Hello World</div>
+    <h1>G.U.E</h1>
+    <h2>Mentee Program</h2>
+    <div class="description">G.U.E is a program...</div>
   </div>
   <div class="mentors">
-    <div class="mentor-heading"></div>
+    <div class="mentor-heading">Here are the group leaders:</div>
     <div class="mentor-container-all">
-      <div class="mentor-container-indiv">
-        <div class=""></div>
+      <div class="mentor-container-indiv mentor-color-1">
+        <div class="mentor-pic-box">
+          <img class="mentor-pic" src="media/facebook.png">
+        </div>
+        <div class="mentor-desc">Name: Andrew Shieh</div>
       </div>
+
+      <div class="mentor-container-indiv mentor-color-2">
+        <div class="mentor-pic-box">
+          <img class="mentor-pic" src="media/facebook.png">
+        </div>
+        <div class="mentor-desc">Name: Andrew Shieh</div>
+      </div>
+
+      <div class="mentor-container-indiv mentor-color-1">
+        <div class="mentor-pic-box">
+          <img class="mentor-pic" src="media/facebook.png">
+        </div>
+        <div class="mentor-desc">Name: Andrew Shieh</div>
+      </div>
+
+      <div class="mentor-container-indiv mentor-color-2">
+        <div class="mentor-pic-box">
+          <img class="mentor-pic" src="media/facebook.png">
+        </div>
+        <div class="mentor-desc">Name: Andrew Shieh</div>
+      </div>
+
+      <div class="mentor-container-indiv mentor-color-1">
+        <div class="mentor-pic-box">
+          <img class="mentor-pic" src="media/facebook.png">
+        </div>
+        <div class="mentor-desc">Name: Andrew Shieh</div>
+      </div>
+
+      <div class="mentor-container-indiv mentor-color-2">
+        <div class="mentor-pic-box">
+          <img class="mentor-pic" src="media/facebook.png">
+        </div>
+        <div class="mentor-desc">Name: Andrew Shieh</div>
+      </div>
+
+      <div class="mentor-container-indiv mentor-color-1">
+        <div class="mentor-pic-box">
+          <img class="mentor-pic" src="media/facebook.png">
+        </div>
+        <div class="mentor-desc">Name: Andrew Shieh</div>
+      </div>
+
+      <div class="mentor-container-indiv mentor-color-2">
+        <div class="mentor-pic-box">
+          <img class="mentor-pic" src="media/facebook.png">
+        </div>
+        <div class="mentor-desc">Name: Andrew Shieh</div>
+      </div>
+
     </div>
   </div>
 </body>
