--- a/guepage.html
+++ b/guepage.html
@@ -1,94 +1,278 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>Gado-Gado Indonesian Student Association UBC</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="shortcut icon" href="media/favicon.png"/>
-  <!--CAROUSEL-->
-  <link rel="stylesheet" href="css/flickity.css">
-  <script src="css/flickity.pkgd.js"></script>
-  <!--BOOTSTRAP-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/navigation-style.css">
-  <link rel="stylesheet" href="css/gue.css">
-  <script src="css/navbar.js"></script>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <title>Gado-Gado Indonesian Student Association UBC</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="shortcut icon" href="media/favicon.png"/>
+    <!--CAROUSEL-->
+    <link rel="stylesheet" href="css/flickity.css">
+    <script src="css/flickity.pkgd.js"></script>
+    <!--BOOTSTRAP-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/navigation-style.css">
+    <link rel="stylesheet" href="css/gue.css">
+    <script src="css/navbar.js"></script>
 </head>
 <body>
-  <div class="banner">
+<div class="banner">
     <img class="banner-img" src="media/gue%20copy.jpg" alt="banner">
-  </div>
-  <div class="desc-box">
+</div>
+<div class="desc-box">
     <h1>G.U.E</h1>
     <h2>Mentee Program</h2>
-    <div class="description">G.U.E is a program...</div>
-  </div>
-  <div class="mentors">
+    <div class="description">
+        You have officially made the first right decision to start off your
+        university journey by joining GisaU & mE (G.U.E.). GISAU, along with
+        our wonderful volunteers, aim to provide you the chance to build
+        relationships with your peers and upper-year students. Be prepared
+        to be immersed with various interactive seminars and games! Psst
+        you will have the chance to collect points throughout the year and
+        win prizes at the end.
+    </div>
+    <div class="description">
+        We are excited that G.U.E. will be online this year and participation
+        will be completely virtual. Wherever you are in the world, you can
+        still experience the complete excitement of G.U.E.
+    </div>
+</div>
+<div class="mentors">
     <div class="mentor-heading">Here are the group leaders:</div>
     <div class="mentor-container-all">
-      <div class="mentor-container-indiv mentor-color-1">
-        <div class="mentor-pic-box">
-          <img class="mentor-pic" src="media/facebook.png">
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/arian.jpg">
+            </div>
+            <div class="mentor-desc">Alexander Arian</div>
+            <div class="mentor-desc">2+ Environmental Engineering</div>
+            <div class="mentor-desc">I can teach you 50-100 different kinds of
+                board games!</div>
         </div>
-        <div class="mentor-desc">Name: Andrew Shieh</div>
-      </div>
 
-      <div class="mentor-container-indiv mentor-color-2">
-        <div class="mentor-pic-box">
-          <img class="mentor-pic" src="media/facebook.png">
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/shieh.jpg">
+            </div>
+            <div class="mentor-desc">Andrew Shieh</div>
+            <div class="mentor-desc">3+ Computer Engineering</div>
+            <div class="mentor-desc">I like video games!</div>
         </div>
-        <div class="mentor-desc">Name: Andrew Shieh</div>
-      </div>
 
-      <div class="mentor-container-indiv mentor-color-2">
-        <div class="mentor-pic-box">
-          <img class="mentor-pic" src="media/facebook.png">
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/bel.jpg">
+            </div>
+            <div class="mentor-desc">Belinda Suhardy</div>
+            <div class="mentor-desc">2+ Commerce</div>
+            <div class="mentor-desc">Finishes a tub of ice cream at 1 go!</div>
         </div>
-        <div class="mentor-desc">Name: Andrew Shieh</div>
-      </div>
 
-      <div class="mentor-container-indiv mentor-color-1">
-        <div class="mentor-pic-box">
-          <img class="mentor-pic" src="media/facebook.png">
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/don.jpg">
+            </div>
+            <div class="mentor-desc">Brandon Sumarno</div>
+            <div class="mentor-desc">3+ Civil Engineering</div>
+            <div class="mentor-desc">I like basketball!</div>
         </div>
-        <div class="mentor-desc">Name: Andrew Shieh</div>
-      </div>
 
-      <div class="mentor-container-indiv mentor-color-1">
-        <div class="mentor-pic-box">
-          <img class="mentor-pic" src="media/facebook.png">
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/celine.jpg">
+            </div>
+            <div class="mentor-desc">Celine Nugraha</div>
+            <div class="mentor-desc">3+ Food Science</div>
+            <div class="mentor-desc">I love eating pickles: acar, takuan,
+                sauerkraut, kimchi, dill - u name it!</div>
         </div>
-        <div class="mentor-desc">Name: Andrew Shieh</div>
-      </div>
 
-      <div class="mentor-container-indiv mentor-color-2">
-        <div class="mentor-pic-box">
-          <img class="mentor-pic" src="media/facebook.png">
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/lotte.jpg">
+            </div>
+            <div class="mentor-desc">Charlotte Lin</div>
+            <div class="mentor-desc">3+ Food & Nutritional</div>
+            <div class="mentor-desc">I can recite the abc backwards!</div>
         </div>
-        <div class="mentor-desc">Name: Andrew Shieh</div>
-      </div>
 
-      <div class="mentor-container-indiv mentor-color-2">
-        <div class="mentor-pic-box">
-          <img class="mentor-pic" src="media/facebook.png">
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/chris.jpg">
+            </div>
+            <div class="mentor-desc">Christopher Mulya</div>
+            <div class="mentor-desc">3+ Food Science</div>
+            <div class="mentor-desc">I don't drink coffee!</div>
         </div>
-        <div class="mentor-desc">Name: Andrew Shieh</div>
-      </div>
 
-      <div class="mentor-container-indiv mentor-color-1">
-        <div class="mentor-pic-box">
-          <img class="mentor-pic" src="media/facebook.png">
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/dea.jpg">
+            </div>
+            <div class="mentor-desc">Deandra Taufik</div>
+            <div class="mentor-desc">3+ Food Science, Psychology (minor)</div>
+            <div class="mentor-desc">I am a skincare junkie! I love
+                collecting products, especially facial
+                serums by The Ordinary!</div>
         </div>
-        <div class="mentor-desc">Name: Andrew Shieh</div>
-      </div>
+
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/henry.jpg">
+            </div>
+            <div class="mentor-desc">Henry Japardi</div>
+            <div class="mentor-desc">4+ Commerce</div>
+            <div class="mentor-desc">I've been gaming my entire life!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/justin.jpg">
+            </div>
+            <div class="mentor-desc">Justin Rahardjo</div>
+            <div class="mentor-desc">2+ Computer Science</div>
+            <div class="mentor-desc">I’ve lost my student card 2x
+                less than a month!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/kelly.jpg">
+            </div>
+            <div class="mentor-desc">Kelly Widjaja</div>
+            <div class="mentor-desc">2+ Food Science</div>
+            <div class="mentor-desc">I skydived!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/ira.jpg">
+            </div>
+            <div class="mentor-desc">Levina Ira</div>
+            <div class="mentor-desc">3+ Food and Nutritional Sciences</div>
+            <div class="mentor-desc">I can finish an entire jar of pb by myself in 2 weeks!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/maydeline.jpg">
+            </div>
+            <div class="mentor-desc">Maydeline Yang</div>
+            <div class="mentor-desc">2+ Commerce</div>
+            <div class="mentor-desc">I dislocated my shoulder 4x playing sports!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/lukito.jpg">
+            </div>
+            <div class="mentor-desc">Michael Lukito</div>
+            <div class="mentor-desc">3+ Economics & MM</div>
+            <div class="mentor-desc">I have been rejected by 70 employers!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/santoso.jpg">
+            </div>
+            <div class="mentor-desc">Michael Santoso</div>
+            <div class="mentor-desc">3+ Mechanical Engineering</div>
+            <div class="mentor-desc">There's a woman who sells Chinese food at UBC
+                but she can't speak English. I love their dishes
+                so much that I learnt how to order in Chinese!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/michelle.jpg">
+            </div>
+            <div class="mentor-desc">Michelle Suriawan</div>
+            <div class="mentor-desc">3+ Food Science</div>
+            <div class="mentor-desc">I like to play badminton and
+                volleyball!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/nadya.jpg">
+            </div>
+            <div class="mentor-desc">Nadya Tan</div>
+            <div class="mentor-desc">3+ Psychology</div>
+            <div class="mentor-desc">I own 14 pairs of jeans!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/sena.jpg">
+            </div>
+            <div class="mentor-desc">Natasya Serena</div>
+            <div class="mentor-desc">2+ Nutritional Sciences</div>
+            <div class="mentor-desc">I can speak in TikTok references!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/nate.jpg">
+            </div>
+            <div class="mentor-desc">Nathan Gunawan</div>
+            <div class="mentor-desc">4+ Entrepreneurship</div>
+            <div class="mentor-desc">I've dislocated my left knee 2x!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/deo.jpg">
+            </div>
+            <div class="mentor-desc">Raphael Deonova</div>
+            <div class="mentor-desc">2+ Computer Science</div>
+            <div class="mentor-desc">I used to be a top Nana player in Vancouver!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/shad.jpg">
+            </div>
+            <div class="mentor-desc">Shadrina Wicaksono</div>
+            <div class="mentor-desc">UBC Sauder Alumni 2020</div>
+            <div class="mentor-desc">I have written 15+ songs!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/steph.jpg">
+            </div>
+            <div class="mentor-desc">Stephanie Hasjim</div>
+            <div class="mentor-desc">3+ Chemical Engineering</div>
+            <div class="mentor-desc">I can predict plot twists in movies
+                before it happens!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-2">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/tania.jpg">
+            </div>
+            <div class="mentor-desc">Tania Suradja</div>
+            <div class="mentor-desc">4+ Dietetics</div>
+            <div class="mentor-desc">I finished knitting a scarf this
+                summer!</div>
+        </div>
+
+        <div class="mentor-container-indiv mentor-color-1">
+            <div class="mentor-pic-box">
+                <img class="mentor-pic" src="media/mentorpic/joss.jpg">
+            </div>
+            <div class="mentor-desc">Theodorus Jossoey</div>
+            <div class="mentor-desc">4+ Cognitive System</div>
+            <div class="mentor-desc">I used to get a bald haircut until
+                7th grade!</div>
+        </div>
 
     </div>
-  </div>
+</div>
 </body>
 </html>
