layout gue page done added gitignore

--- a/guepage.html
+++ b/guepage.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <div class="banner">
-    <img class="banner-img" src="media/gue%20copy.jpg" alt="banner">
+    <img class="banner-img" src="media/gue-banner.jpg" alt="banner">
 </div>
 <div class="desc-box">
     <h1>G.U.E</h1>
@@ -31,8 +31,10 @@
         You have officially made the first right decision to start off your
         university journey by joining GisaU & mE (G.U.E.). GISAU, along with
         our wonderful volunteers, aim to provide you the chance to build
-        relationships with your peers and upper-year students. Be prepared
-        to be immersed with various interactive seminars and games! Psst
+        relationships with your peers and upper-year students.
+    </div>
+    <div class="description">
+        Be prepared to be immersed with various interactive seminars and games! Psst
         you will have the chance to collect points throughout the year and
         win prizes at the end.
     </div>
@@ -49,227 +51,273 @@
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/arian.jpg">
             </div>
-            <div class="mentor-desc">Alexander Arian</div>
-            <div class="mentor-desc">2+ Environmental Engineering</div>
-            <div class="mentor-desc">I can teach you 50-100 different kinds of
-                board games!</div>
+            <div class="mentor-desc-box"><div class="mentor-desc">Alexander Arian</div>
+                <div class="mentor-desc">2+ Environmental Engineering</div>
+                <div class="mentor-desc">I can teach you 50-100 different kinds of
+                    board games!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/shieh.jpg">
             </div>
-            <div class="mentor-desc">Andrew Shieh</div>
-            <div class="mentor-desc">3+ Computer Engineering</div>
-            <div class="mentor-desc">I like video games!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Andrew Shieh</div>
+                <div class="mentor-desc">3+ Computer Engineering</div>
+                <div class="mentor-desc">I like video games!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/bel.jpg">
             </div>
-            <div class="mentor-desc">Belinda Suhardy</div>
-            <div class="mentor-desc">2+ Commerce</div>
-            <div class="mentor-desc">Finishes a tub of ice cream at 1 go!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Belinda Suhardy</div>
+                <div class="mentor-desc">2+ Commerce</div>
+                <div class="mentor-desc">Finishes a tub of ice cream at 1 go!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/don.jpg">
             </div>
-            <div class="mentor-desc">Brandon Sumarno</div>
-            <div class="mentor-desc">3+ Civil Engineering</div>
-            <div class="mentor-desc">I like basketball!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Brandon Sumarno</div>
+                <div class="mentor-desc">3+ Civil Engineering</div>
+                <div class="mentor-desc">I like basketball!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/celine.jpg">
             </div>
-            <div class="mentor-desc">Celine Nugraha</div>
-            <div class="mentor-desc">3+ Food Science</div>
-            <div class="mentor-desc">I love eating pickles: acar, takuan,
-                sauerkraut, kimchi, dill - u name it!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Celine Nugraha</div>
+                <div class="mentor-desc">3+ Food Science</div>
+                <div class="mentor-desc">I love eating pickles: acar, takuan,
+                    sauerkraut, kimchi, dill - u name it!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/lotte.jpg">
             </div>
-            <div class="mentor-desc">Charlotte Lin</div>
-            <div class="mentor-desc">3+ Food & Nutritional</div>
-            <div class="mentor-desc">I can recite the abc backwards!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Charlotte Lin</div>
+                <div class="mentor-desc">3+ Food & Nutritional</div>
+                <div class="mentor-desc">I can recite the abc backwards!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/chris.jpg">
             </div>
-            <div class="mentor-desc">Christopher Mulya</div>
-            <div class="mentor-desc">3+ Food Science</div>
-            <div class="mentor-desc">I don't drink coffee!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Christopher Mulya</div>
+                <div class="mentor-desc">3+ Food Science</div>
+                <div class="mentor-desc">I don't drink coffee!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/dea.jpg">
             </div>
-            <div class="mentor-desc">Deandra Taufik</div>
-            <div class="mentor-desc">3+ Food Science, Psychology (minor)</div>
-            <div class="mentor-desc">I am a skincare junkie! I love
-                collecting products, especially facial
-                serums by The Ordinary!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Deandra Taufik</div>
+                <div class="mentor-desc">3+ Food Science, Psychology (minor)</div>
+                <div class="mentor-desc">I am a skincare junkie! I love
+                    collecting products, especially facial
+                    serums by The Ordinary!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/henry.jpg">
             </div>
-            <div class="mentor-desc">Henry Japardi</div>
-            <div class="mentor-desc">4+ Commerce</div>
-            <div class="mentor-desc">I've been gaming my entire life!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Henry Japardi</div>
+                <div class="mentor-desc">4+ Commerce</div>
+                <div class="mentor-desc">I've been gaming my entire life!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/justin.jpg">
             </div>
-            <div class="mentor-desc">Justin Rahardjo</div>
-            <div class="mentor-desc">2+ Computer Science</div>
-            <div class="mentor-desc">I’ve lost my student card 2x
-                less than a month!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Justin Rahardjo</div>
+                <div class="mentor-desc">2+ Computer Science</div>
+                <div class="mentor-desc">I’ve lost my student card 2x
+                    less than a month!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/kelly.jpg">
             </div>
-            <div class="mentor-desc">Kelly Widjaja</div>
-            <div class="mentor-desc">2+ Food Science</div>
-            <div class="mentor-desc">I skydived!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Kelly Widjaja</div>
+                <div class="mentor-desc">2+ Food Science</div>
+                <div class="mentor-desc">I skydived!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/ira.jpg">
             </div>
-            <div class="mentor-desc">Levina Ira</div>
-            <div class="mentor-desc">3+ Food and Nutritional Sciences</div>
-            <div class="mentor-desc">I can finish an entire jar of pb by myself in 2 weeks!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Levina Ira</div>
+                <div class="mentor-desc">3+ Food and Nutritional Sciences</div>
+                <div class="mentor-desc">I can finish an entire jar of pb by myself in 2 weeks!</div>
+            </div>
+
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/maydeline.jpg">
             </div>
-            <div class="mentor-desc">Maydeline Yang</div>
-            <div class="mentor-desc">2+ Commerce</div>
-            <div class="mentor-desc">I dislocated my shoulder 4x playing sports!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Maydeline Yang</div>
+                <div class="mentor-desc">2+ Commerce</div>
+                <div class="mentor-desc">I dislocated my shoulder 4x playing sports!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/lukito.jpg">
             </div>
-            <div class="mentor-desc">Michael Lukito</div>
-            <div class="mentor-desc">3+ Economics & MM</div>
-            <div class="mentor-desc">I have been rejected by 70 employers!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Michael Lukito</div>
+                <div class="mentor-desc">3+ Economics & MM</div>
+                <div class="mentor-desc">I have been rejected by 70 employers!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/santoso.jpg">
             </div>
-            <div class="mentor-desc">Michael Santoso</div>
-            <div class="mentor-desc">3+ Mechanical Engineering</div>
-            <div class="mentor-desc">There's a woman who sells Chinese food at UBC
-                but she can't speak English. I love their dishes
-                so much that I learnt how to order in Chinese!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Michael Santoso</div>
+                <div class="mentor-desc">3+ Mechanical Engineering</div>
+                <div class="mentor-desc">There's a woman who sells Chinese food at UBC
+                    but she can't speak English. I love their dishes
+                    so much that I learnt how to order in Chinese!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/michelle.jpg">
             </div>
-            <div class="mentor-desc">Michelle Suriawan</div>
-            <div class="mentor-desc">3+ Food Science</div>
-            <div class="mentor-desc">I like to play badminton and
-                volleyball!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Michelle Suriawan</div>
+                <div class="mentor-desc">3+ Food Science</div>
+                <div class="mentor-desc">I like to play badminton and volleyball!</div>
+            </div>
+
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/nadya.jpg">
             </div>
-            <div class="mentor-desc">Nadya Tan</div>
-            <div class="mentor-desc">3+ Psychology</div>
-            <div class="mentor-desc">I own 14 pairs of jeans!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Nadya Tan</div>
+                <div class="mentor-desc">3+ Psychology</div>
+                <div class="mentor-desc">I own 14 pairs of jeans!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/sena.jpg">
             </div>
-            <div class="mentor-desc">Natasya Serena</div>
-            <div class="mentor-desc">2+ Nutritional Sciences</div>
-            <div class="mentor-desc">I can speak in TikTok references!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Natasya Serena</div>
+                <div class="mentor-desc">2+ Nutritional Sciences</div>
+                <div class="mentor-desc">I can speak in TikTok references!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/nate.jpg">
             </div>
-            <div class="mentor-desc">Nathan Gunawan</div>
-            <div class="mentor-desc">4+ Entrepreneurship</div>
-            <div class="mentor-desc">I've dislocated my left knee 2x!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Nathan Gunawan</div>
+                <div class="mentor-desc">4+ Entrepreneurship</div>
+                <div class="mentor-desc">I've dislocated my left knee 2x!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/deo.jpg">
             </div>
-            <div class="mentor-desc">Raphael Deonova</div>
-            <div class="mentor-desc">2+ Computer Science</div>
-            <div class="mentor-desc">I used to be a top Nana player in Vancouver!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Raphael Deonova</div>
+                <div class="mentor-desc">2+ Computer Science</div>
+                <div class="mentor-desc">I used to be a top Nana player in Vancouver!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/shad.jpg">
             </div>
-            <div class="mentor-desc">Shadrina Wicaksono</div>
-            <div class="mentor-desc">UBC Sauder Alumni 2020</div>
-            <div class="mentor-desc">I have written 15+ songs!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Shadrina Wicaksono</div>
+                <div class="mentor-desc">UBC Sauder Alumni 2020</div>
+                <div class="mentor-desc">I have written 15+ songs!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/steph.jpg">
             </div>
-            <div class="mentor-desc">Stephanie Hasjim</div>
-            <div class="mentor-desc">3+ Chemical Engineering</div>
-            <div class="mentor-desc">I can predict plot twists in movies
-                before it happens!</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-desc">Stephanie Hasjim</div>
+                <div class="mentor-desc">3+ Chemical Engineering</div>
+                <div class="mentor-desc">I can predict plot twists in movies
+                    before it happens!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-2">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/tania.jpg">
             </div>
-            <div class="mentor-desc">Tania Suradja</div>
-            <div class="mentor-desc">4+ Dietetics</div>
-            <div class="mentor-desc">I finished knitting a scarf this
-                summer!</div>
+            <div class="mentor-desc-box"><div class="mentor-desc">Tania Suradja</div>
+                <div class="mentor-desc">4+ Dietetics</div>
+                <div class="mentor-desc">I finished knitting a scarf this
+                    summer!</div>
+            </div>
         </div>
 
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/joss.jpg">
             </div>
-            <div class="mentor-desc">Theodorus Jossoey</div>
-            <div class="mentor-desc">4+ Cognitive System</div>
-            <div class="mentor-desc">I used to get a bald haircut until
-                7th grade!</div>
+            <div class="mentor-desc-box"><div class="mentor-desc">Theodorus Jossoey</div>
+                <div class="mentor-desc">4+ Cognitive System</div>
+                <div class="mentor-desc">I used to get a bald haircut until
+                    7th grade!</div>
+            </div>
         </div>
 
     </div>
