Font for the page

--- a/guepage.html
+++ b/guepage.html
@@ -24,9 +24,9 @@
 <div class="banner">
     <img class="banner-img" src="media/gue-banner.jpg" alt="banner">
 </div>
+<h1>G.U.E</h1>
+<h2>Mentorship Program</h2>
 <div class="desc-box">
-    <h1>G.U.E</h1>
-    <h2>Mentee Program</h2>
     <div class="description">
         You have officially made the first right decision to start off your
         university journey by joining GisaU & mE (G.U.E.). GISAU, along with
@@ -51,7 +51,8 @@
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/arian.jpg">
             </div>
-            <div class="mentor-desc-box"><div class="mentor-desc">Alexander Arian</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-name">Alexander Arian</div>
                 <div class="mentor-desc">2+ Environmental Engineering</div>
                 <div class="mentor-desc">I can teach you 50-100 different kinds of
                     board games!</div>
@@ -63,7 +64,7 @@
                 <img class="mentor-pic" src="media/mentorpic/shieh.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Andrew Shieh</div>
+                <div class="mentor-name">Andrew Shieh</div>
                 <div class="mentor-desc">3+ Computer Engineering</div>
                 <div class="mentor-desc">I like video games!</div>
             </div>
@@ -74,7 +75,7 @@
                 <img class="mentor-pic" src="media/mentorpic/bel.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Belinda Suhardy</div>
+                <div class="mentor-name">Belinda Suhardy</div>
                 <div class="mentor-desc">2+ Commerce</div>
                 <div class="mentor-desc">Finishes a tub of ice cream at 1 go!</div>
             </div>
@@ -85,7 +86,7 @@
                 <img class="mentor-pic" src="media/mentorpic/don.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Brandon Sumarno</div>
+                <div class="mentor-name">Brandon Sumarno</div>
                 <div class="mentor-desc">3+ Civil Engineering</div>
                 <div class="mentor-desc">I like basketball!</div>
             </div>
@@ -96,7 +97,7 @@
                 <img class="mentor-pic" src="media/mentorpic/celine.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Celine Nugraha</div>
+                <div class="mentor-name">Celine Nugraha</div>
                 <div class="mentor-desc">3+ Food Science</div>
                 <div class="mentor-desc">I love eating pickles: acar, takuan,
                     sauerkraut, kimchi, dill - u name it!</div>
@@ -108,7 +109,7 @@
                 <img class="mentor-pic" src="media/mentorpic/lotte.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Charlotte Lin</div>
+                <div class="mentor-name">Charlotte Lin</div>
                 <div class="mentor-desc">3+ Food & Nutritional</div>
                 <div class="mentor-desc">I can recite the abc backwards!</div>
             </div>
@@ -119,7 +120,7 @@
                 <img class="mentor-pic" src="media/mentorpic/chris.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Christopher Mulya</div>
+                <div class="mentor-name">Christopher Mulya</div>
                 <div class="mentor-desc">3+ Food Science</div>
                 <div class="mentor-desc">I don't drink coffee!</div>
             </div>
@@ -130,7 +131,7 @@
                 <img class="mentor-pic" src="media/mentorpic/dea.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Deandra Taufik</div>
+                <div class="mentor-name">Deandra Taufik</div>
                 <div class="mentor-desc">3+ Food Science, Psychology (minor)</div>
                 <div class="mentor-desc">I am a skincare junkie! I love
                     collecting products, especially facial
@@ -143,7 +144,7 @@
                 <img class="mentor-pic" src="media/mentorpic/henry.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Henry Japardi</div>
+                <div class="mentor-name">Henry Japardi</div>
                 <div class="mentor-desc">4+ Commerce</div>
                 <div class="mentor-desc">I've been gaming my entire life!</div>
             </div>
@@ -154,7 +155,7 @@
                 <img class="mentor-pic" src="media/mentorpic/justin.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Justin Rahardjo</div>
+                <div class="mentor-name">Justin Rahardjo</div>
                 <div class="mentor-desc">2+ Computer Science</div>
                 <div class="mentor-desc">I’ve lost my student card 2x
                     less than a month!</div>
@@ -166,7 +167,7 @@
                 <img class="mentor-pic" src="media/mentorpic/kelly.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Kelly Widjaja</div>
+                <div class="mentor-name">Kelly Widjaja</div>
                 <div class="mentor-desc">2+ Food Science</div>
                 <div class="mentor-desc">I skydived!</div>
             </div>
@@ -177,7 +178,7 @@
                 <img class="mentor-pic" src="media/mentorpic/ira.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Levina Ira</div>
+                <div class="mentor-name">Levina Ira</div>
                 <div class="mentor-desc">3+ Food and Nutritional Sciences</div>
                 <div class="mentor-desc">I can finish an entire jar of pb by myself in 2 weeks!</div>
             </div>
@@ -189,7 +190,7 @@
                 <img class="mentor-pic" src="media/mentorpic/maydeline.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Maydeline Yang</div>
+                <div class="mentor-name">Maydeline Yang</div>
                 <div class="mentor-desc">2+ Commerce</div>
                 <div class="mentor-desc">I dislocated my shoulder 4x playing sports!</div>
             </div>
@@ -200,7 +201,7 @@
                 <img class="mentor-pic" src="media/mentorpic/lukito.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Michael Lukito</div>
+                <div class="mentor-name">Michael Lukito</div>
                 <div class="mentor-desc">3+ Economics & MM</div>
                 <div class="mentor-desc">I have been rejected by 70 employers!</div>
             </div>
@@ -211,7 +212,7 @@
                 <img class="mentor-pic" src="media/mentorpic/santoso.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Michael Santoso</div>
+                <div class="mentor-name">Michael Santoso</div>
                 <div class="mentor-desc">3+ Mechanical Engineering</div>
                 <div class="mentor-desc">There's a woman who sells Chinese food at UBC
                     but she can't speak English. I love their dishes
@@ -224,7 +225,7 @@
                 <img class="mentor-pic" src="media/mentorpic/michelle.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Michelle Suriawan</div>
+                <div class="mentor-name">Michelle Suriawan</div>
                 <div class="mentor-desc">3+ Food Science</div>
                 <div class="mentor-desc">I like to play badminton and volleyball!</div>
             </div>
@@ -236,7 +237,7 @@
                 <img class="mentor-pic" src="media/mentorpic/nadya.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Nadya Tan</div>
+                <div class="mentor-name">Nadya Tan</div>
                 <div class="mentor-desc">3+ Psychology</div>
                 <div class="mentor-desc">I own 14 pairs of jeans!</div>
             </div>
@@ -247,7 +248,7 @@
                 <img class="mentor-pic" src="media/mentorpic/sena.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Natasya Serena</div>
+                <div class="mentor-name">Natasya Serena</div>
                 <div class="mentor-desc">2+ Nutritional Sciences</div>
                 <div class="mentor-desc">I can speak in TikTok references!</div>
             </div>
@@ -258,7 +259,7 @@
                 <img class="mentor-pic" src="media/mentorpic/nate.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Nathan Gunawan</div>
+                <div class="mentor-name">Nathan Gunawan</div>
                 <div class="mentor-desc">4+ Entrepreneurship</div>
                 <div class="mentor-desc">I've dislocated my left knee 2x!</div>
             </div>
@@ -269,7 +270,7 @@
                 <img class="mentor-pic" src="media/mentorpic/deo.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Raphael Deonova</div>
+                <div class="mentor-name">Raphael Deonova</div>
                 <div class="mentor-desc">2+ Computer Science</div>
                 <div class="mentor-desc">I used to be a top Nana player in Vancouver!</div>
             </div>
@@ -280,7 +281,7 @@
                 <img class="mentor-pic" src="media/mentorpic/shad.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Shadrina Wicaksono</div>
+                <div class="mentor-name">Shadrina Wicaksono</div>
                 <div class="mentor-desc">UBC Sauder Alumni 2020</div>
                 <div class="mentor-desc">I have written 15+ songs!</div>
             </div>
@@ -291,7 +292,7 @@
                 <img class="mentor-pic" src="media/mentorpic/steph.jpg">
             </div>
             <div class="mentor-desc-box">
-                <div class="mentor-desc">Stephanie Hasjim</div>
+                <div class="mentor-name">Stephanie Hasjim</div>
                 <div class="mentor-desc">3+ Chemical Engineering</div>
                 <div class="mentor-desc">I can predict plot twists in movies
                     before it happens!</div>
@@ -302,7 +303,8 @@
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/tania.jpg">
             </div>
-            <div class="mentor-desc-box"><div class="mentor-desc">Tania Suradja</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-name">Tania Suradja</div>
                 <div class="mentor-desc">4+ Dietetics</div>
                 <div class="mentor-desc">I finished knitting a scarf this
                     summer!</div>
@@ -313,7 +315,8 @@
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/joss.jpg">
             </div>
-            <div class="mentor-desc-box"><div class="mentor-desc">Theodorus Jossoey</div>
+            <div class="mentor-name-box">
+                <div class="mentor-desc">Theodorus Jossoey</div>
                 <div class="mentor-desc">4+ Cognitive System</div>
                 <div class="mentor-desc">I used to get a bald haircut until
                     7th grade!</div>
